k8s/Istio/gateaway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jupyterlab-gateway
spec:
  selector:
    istio: ingressgateway  # Use your ingress gateway selector if different
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "localhost"
      tls:
        mode: PASSTHROUGH
