k8s/Istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jupyterlab-virtualservice
spec:
  hosts:
    - "localhost"
  gateways:
    - jupyterlab-gateway  # Match the name of your Gateway resource
  http:
    - route:
        - destination:
            host: jupyterlab.mynamespace.svc.cluster.local  # Replace with your service FQDN
            port:
              number: 8888
